li coloring added

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -65,7 +65,12 @@ body {
 }
 
 .activeTab {
-  background-color: $btn-hover-color
+  background-color: $btn-color;
+  border-radius: 2px;
+
+  li, p {
+    color: #fff;
+  }
 }
 
 /*
