table fixes + design change finalized

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,4 +1,3 @@
-
 /*
  * Base structure
  */
@@ -15,7 +14,6 @@ $navbar-color: #455A64;
 $side-nav-color: #CFD8DC;
 $btn-color: #607D8B;
 $btn-hover-color: #455A64;
-
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
   -moz-border-radius: $radius;
@@ -34,6 +32,7 @@ body {
   width: 100%;
   height: 100%;
   border-color: $primary-border-color;
+  background-color: $secondary-background-color;
 
   .panel-body {
     padding: none;
@@ -55,7 +54,6 @@ body {
       // &:disabled {
       // }
     }
-
   }
   .panel-scroll {
     @extend .panel-body;
@@ -63,14 +61,12 @@ body {
     overflow-y: scroll;
   }
 }
-
 .activeTab {
   background-color: $btn-color;
   border-radius: 2px;
-
-  li, p {
-    color: #fff;
-  }
+}
+.nav-sidebar li.activeTab a {
+  color: #fff;
 }
 
 /*
@@ -133,34 +129,31 @@ body {
   -moz-box-shadow: rgba(0, 0, 0, 0.1) 0 8px 8px 0;
   color: $primary-font-color;
 }
-
-  .navbar-header .navbar-brand {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 15px;
-    margin-right: 10px;
+.navbar-header .navbar-brand {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 15px;
+  margin-right: 10px;
+  color: #fff;
+  letter-spacing: 1px;
+  font-size: 20px;
+  font-weight: 500;
+}
+.navbar-collapse .nav li {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
+  @include border-radius(2px);
+  &:hover {
+    background-color: $btn-color;
+  }
+  a {
     color: #fff;
-    letter-spacing: 1px;
-    font-size: 20px;
-    font-weight: 500;
   }
-  .navbar-collapse .nav li {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 5px;
-    margin-right: 5px;
-    @include border-radius(2px);
-    &:hover {
-      background-color: $btn-color;
-    }
-    a {
-      color: #fff;
-    }
-  }
-
-
+}
 th {
-    text-align: center;
+  text-align: center;
 }
 
 /*
@@ -213,18 +206,18 @@ th {
     margin-bottom: 10px;
     margin-left: 5px;
     margin-right: 5px;
-
   }
 }
-
-.nav>li>a:focus, .nav>li>a:hover, .nav>li>a:active{
-    text-decoration: none;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -ms-border-radius: 3px;
-    border-radius: 3px;
-    background-color: $btn-color;
-    color: #fff;
+.nav>li>a:focus,
+.nav>li>a:hover,
+.nav>li>a:active {
+  text-decoration: none;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  border-radius: 3px;
+  background-color: $btn-color;
+  color: #fff;
 }
 
 /*
@@ -244,8 +237,6 @@ th {
   font-weight: 400;
   border-color: $primary-border-color;
 }
-
-
 .btn-dashboard {
   color: $secondary-background-color;
   border-style: none;
@@ -257,13 +248,16 @@ th {
   margin: 2px;
   padding-top: 8px;
   padding-bottom: 8px;
-
   box-shadow: rgba(0, 0, 0, 0.1) 0 8px 8px 0;
   -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0 8px 8px 0;
   -moz-box-shadow: rgba(0, 0, 0, 0.1) 0 8px 8px 0;
-
 }
-.btn-dashboard:hover, .btn-dashboard:focus, .btn-dashboard.focus, .btn-dashboard:active, .btn-dashboard.active, .open > .dropdown-toggle.btn-dashboard {
+.btn-dashboard:hover,
+.btn-dashboard:focus,
+.btn-dashboard.focus,
+.btn-dashboard:active,
+.btn-dashboard.active,
+.open > .dropdown-toggle.btn-dashboard {
   color: $secondary-background-color;
   background-color: $btn-hover-color;
   border-color: $btn-hover-color;
@@ -271,17 +265,34 @@ th {
   -moz-transition: all 0.5s ease-in-out;
   -webkit-transition: all 0.5s ease-in-out;
 }
-
-.btn-dashboard:active, .btn-dashboard.active, .open > .dropdown-toggle.btn-dashboard {
+.btn-dashboard:active,
+.btn-dashboard.active,
+.open > .dropdown-toggle.btn-dashboard {
   background-image: none;
 }
-.btn-dashboard.disabled, .btn-dashboard[disabled], fieldset[disabled] .btn-dashboard, .btn-dashboard.disabled:hover, .btn-dashboard[disabled]:hover, fieldset[disabled] .btn-dashboard:hover, .btn-dashboard.disabled:focus, .btn-dashboard[disabled]:focus, fieldset[disabled] .btn-dashboard:focus, .btn-dashboard.disabled.focus, .btn-dashboard[disabled].focus, fieldset[disabled] .btn-dashboard.focus, .btn-dashboard.disabled:active, .btn-dashboard[disabled]:active, fieldset[disabled] .btn-dashboard:active, .btn-dashboard.disabled.active, .btn-dashboard[disabled].active, fieldset[disabled] .btn-dashboard.active {
+.btn-dashboard.disabled,
+.btn-dashboard[disabled],
+fieldset[disabled] .btn-dashboard,
+.btn-dashboard.disabled:hover,
+.btn-dashboard[disabled]:hover,
+fieldset[disabled] .btn-dashboard:hover,
+.btn-dashboard.disabled:focus,
+.btn-dashboard[disabled]:focus,
+fieldset[disabled] .btn-dashboard:focus,
+.btn-dashboard.disabled.focus,
+.btn-dashboard[disabled].focus,
+fieldset[disabled] .btn-dashboard.focus,
+.btn-dashboard.disabled:active,
+.btn-dashboard[disabled]:active,
+fieldset[disabled] .btn-dashboard:active,
+.btn-dashboard.disabled.active,
+.btn-dashboard[disabled].active,
+fieldset[disabled] .btn-dashboard.active {
   background-color: #DCEDC8;
   border-color: #DCEDC8;
   letter-spacing: 1px;
   border-radius: 4px;
 }
-
 .btn-dashboard-red {
   color: $secondary-background-color;
   border-style: none;
@@ -297,7 +308,12 @@ th {
   -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0 8px 8px 0;
   -moz-box-shadow: rgba(0, 0, 0, 0.1) 0 8px 8px 0;
 }
-.btn-dashboard-red:hover, .btn-dashboard-red:focus, .btn-dashboard-red.focus, .btn-dashboard-red:active, .btn-dashboard-red.active, .open > .dropdown-toggle.btn-dashboard-red {
+.btn-dashboard-red:hover,
+.btn-dashboard-red:focus,
+.btn-dashboard-red.focus,
+.btn-dashboard-red:active,
+.btn-dashboard-red.active,
+.open > .dropdown-toggle.btn-dashboard-red {
   color: $secondary-background-color;
   background-color: #B71C1C;
   border-color: #B71C1C;
@@ -305,8 +321,6 @@ th {
   -moz-transition: all 0.5s ease-in-out;
   -webkit-transition: all 0.5s ease-in-out;
 }
-
-
 .btn-dashboard-green {
   color: $secondary-background-color;
   border-style: none;
@@ -322,7 +336,12 @@ th {
   -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0 8px 8px 0;
   -moz-box-shadow: rgba(0, 0, 0, 0.1) 0 8px 8px 0;
 }
-.btn-dashboard-green:hover, .btn-dashboard-green:focus, .btn-dashboard-green.focus, .btn-dashboard-green:active, .btn-dashboard-green.active, .open > .dropdown-toggle.btn-dashboard-green {
+.btn-dashboard-green:hover,
+.btn-dashboard-green:focus,
+.btn-dashboard-green.focus,
+.btn-dashboard-green:active,
+.btn-dashboard-green.active,
+.open > .dropdown-toggle.btn-dashboard-green {
   color: $secondary-background-color;
   background-color: #1B5E20;
   border-color: #1B5E20;
@@ -330,7 +349,6 @@ th {
   -moz-transition: all 0.5s ease-in-out;
   -webkit-transition: all 0.5s ease-in-out;
 }
-
 input.search {
   border-radius: 4px;
   padding-left: 15px;
@@ -340,7 +358,6 @@ input.search {
   border-style: none;
   background-color: $primary-border-color;
 }
-
 .panel {
   border-radius: 5px;
   border: none;
@@ -348,23 +365,17 @@ input.search {
   -webkit-box-shadow: rgba(0, 0, 0, 0.04) 0 8px 8px 0;
   -moz-box-shadow: rgba(0, 0, 0, 0.04) 0 8px 8px 0;
 }
-
 .panel-green {
   background-color: $side-nav-color;
 }
-
-
 .huge {
   font-size: 30px;
   font-weight: 400;
   color: #000;
 }
-
 .panel-footer {
   background-color: #EEEEEE;
-
 }
-
 hr.short {
   width: 90%;
   border-width: 1px;
@@ -372,33 +383,50 @@ hr.short {
   border-color: $side-nav-color;
   opacity: 0.9;
 }
-
 div.modal-text {
   width: 80%;
 }
-
 table {
-    display: table;
-    border-collapse: separate;
-    border-spacing: 2px;
-    border-color: grey;
+  display: table;
+  border-collapse: separate;
+  border-spacing: 0;
+  border-color: grey;
+  border-radius: 5px;
+}
+table.tableWhite {
+  background-color: #f3f3f3;
+  th {
+    background-color: #eeeeee;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    vertical-align: middle;
+  }
+  td {
+    vertical-align: bottom;
+  }
 }
 
+.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
+  vertical-align: middle;
+  text-align: center;
+}
+
+
 select {
-    padding: 6px 10px;
-    border: 1px solid #bfbfbf;
-    /*
+  padding: 6px 10px;
+  border: 1px solid #bfbfbf;
+  /*
     -webkit-appearance: none;
     -moz-appearance: none;
     -ms-appearance: none;
     -o-appearance: none;
     appearance: none;
     */
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
-    border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
 }
 
 /*
