--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -17,12 +17,10 @@
               </div>
             </div>
             <div class="panel panel-body">
-              <!-- <div class="panel-heading">
-                                <h3 class="panel-title">Supply Chain Representation</h3>
-                            </div> -->
-              <div class="panel-scroll">
+              <!--
+              <div class="panel-scroll">-->
                 <div class="table-responsive">
-                  <table class="table table-striped">
+                  <table class="table tableWhite">
                     <thead>
                       <tr>
                         <th>Invoice #</th>
@@ -49,7 +47,7 @@
                     </tbody>
                   </table>
                 </div>
-              </div>
+              <!--</div>-->
             </div>
           </div>
         </div>
