--- a/src/views/dashboard.default.overview.html
+++ b/src/views/dashboard.default.overview.html
@@ -8,7 +8,7 @@
         <div class="panel-container">
           <div class="panel panel-default">
             <div class="panel-body">
-
+<!--
               <div class="row">
                 <div class="col-lg-4 col-md-6">
                   <div class="panel panel-green">
@@ -81,7 +81,7 @@
                   </div>
                 </div>
               </div>
-
+-->
 
                 <div class="panel-heading">
                   <h3>Completed Transactions</h3>
@@ -89,12 +89,11 @@
                 </div>
 
 
-                <div class="panel-scroll">
+            <!--<div class="panel-scroll">-->
                   <div class="table-responsive">
-                    <table class="table table-striped">
+                    <table class="table tableWhite">
                       <thead>
                         <tr>
-                          <th></th>
                           <th>Invoice #</th>
                           <th>Payment Method</th>
                           <th>Status</th>
@@ -104,7 +103,6 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <td><input type ="checkbox"></td>
                           <td>1,012</td>
                           <td>Credit Card</td>
                           <td>Outstanding</td>
@@ -112,7 +110,6 @@
                           <td>$67.99</td>
                         </tr>
                         <tr>
-                          <td><input type ="checkbox"></td>
                           <td>1,011</td>
                           <td>Credit Card</td>
                           <td>Completed</td>
@@ -120,7 +117,6 @@
                           <td>$125.15</td>
                         </tr>
                         <tr>
-                          <td><input type ="checkbox"></td>
                           <td>1,010</td>
                           <td>Subscription Pickup</td>
                           <td>Completed</td>
@@ -128,7 +124,6 @@
                           <td>N/A</td>
                         </tr>
                         <tr>
-                          <td><input type ="checkbox"></td>
                           <td>1,009</td>
                           <td>Credit Card</td>
                           <td>Outstanding</td>
@@ -136,7 +131,6 @@
                           <td>$225.59</td>
                         </tr>
                         <tr>
-                          <td><input type ="checkbox"></td>
                           <td>1,008</td>
                           <td>Paypal</td>
                           <td>Completed</td>
@@ -144,7 +138,6 @@
                           <td>$416.25</td>
                         </tr>
                         <tr>
-                          <td><input type ="checkbox"></td>
                           <td>1,007</td>
                           <td>Credit Card</td>
                           <td>Completed</td>
@@ -152,7 +145,6 @@
                           <td>$27.35</td>
                         </tr>
                         <tr>
-                          <td><input type ="checkbox"></td>
                           <td>1,006</td>
                           <td>Subscription Pickup</td>
                           <td>Completed</td>
@@ -160,7 +152,6 @@
                           <td>N/A</td>
                         </tr>
                         <tr>
-                          <td><input type ="checkbox"></td>
                           <td>1,005</td>
                           <td>Credit Card</td>
                           <td>Outstanding</td>
@@ -168,7 +159,6 @@
                           <td>$144.43</td>
                         </tr>
                         <tr>
-                          <td><input type ="checkbox"></td>
                           <td>1,004</td>
                           <td>Paypal</td>
                           <td>Completed</td>
@@ -176,7 +166,6 @@
                           <td>$25.94</td>
                         </tr>
                         <tr>
-                          <td><input type ="checkbox"></td>
                           <td>1,003</td>
                           <td>Paypal</td>
                           <td>Completed</td>
@@ -184,7 +173,6 @@
                           <td>$364.99</td>
                         </tr>
                         <tr>
-                          <td><input type ="checkbox"></td>
                           <td>1,002</td>
                           <td>Paypal</td>
                           <td>Completed</td>
@@ -192,7 +180,6 @@
                           <td>$364.99</td>
                         </tr>
                         <tr>
-                          <td><input type ="checkbox"></td>
                           <td>1,001</td>
                           <td>Paypal</td>
                           <td>Completed</td>
@@ -200,7 +187,6 @@
                           <td>$364.99</td>
                         </tr>
                         <tr>
-                          <td><input type ="checkbox"></td>
                           <td>1,000</td>
                           <td>Paypal</td>
                           <td>Completed</td>
@@ -211,7 +197,7 @@
                       </tbody>
                     </table>
                   </div>
-                </div>
+              <!--  </div>-->
 
 
             </div>
