--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -22,7 +22,7 @@
                             </div> -->
               <div class="panel-body">
                 <div class="table-responsive">
-                  <table class="table table-striped">
+                  <table class="table tableWhite">
                     <thead>
                       <tr>
                         <th></th>
