--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -65,10 +65,10 @@
   </div>
 
   <div class="modal-footer">
-      
+
     <button class="btn-dashboard" type="button" ng-click="moveBlock()">Move</button>
     <button class="btn-dashboard" type="button" ng-click="moveBlockToSales()">Move to Sales</button>
-    
+
     <!-- THIS IS THE BUTTON FOR VIEW DETAILS MODAL -->
     <button class="btn-dashboard" type="button" ng-click="viewDetails()">View Details</button>
     <button class="btn-dashboard-green" type="button" ng-click="addBlock()">Add</button>
@@ -85,20 +85,22 @@
           <table class="table table-striped">
             <thead>
               <tr>
-                <th>#</th>
-                <th>ID</th>
-                <th>Date Created</th>
-                <th>Select</th>
+              <th>#</th>
+              <th>Product Type</th>
+              <th>Quantity</th>
+              <th>Date Created</th>
+              <th>Select</th>
               </tr>
             </thead>
             <tbody ng-repeat="block in blocks track by $index">
               <tr>
-                <td>{{$index + 1}}</td>
-                <td>{{block._id}}</td>
-                <td>{{block.dateCreated}}</td>
-                <td>
-                  <input type="radio" ng-model="$parent.selectedBlock" ng-value="$index">
-                </td>
+              <td>{{$index + 1}}</td>
+              <td>{{block.product}}</td>
+              <td>{{block.quantity + " " + block.units}}</td>
+              <td>{{block.dateCreated.substring(0,10)}}</td>
+              <td>
+                <input type="radio" ng-model="$parent.selectedBlock" ng-value="$index">
+              </td>
               </tr>
             </tbody>
           </table>
@@ -122,7 +124,7 @@
     <form>
       <fieldset class="form-group">
         <label>Product Type</label><br>
-        
+
         <select class="dropdown" ng-model="selectedProduct" ng-options="product.name for product in products"></select>
 
         <!--<select ng-model="selectedProduct" name="mydropdown" class="dropdown">
