Add product name to the appropriate column

--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -95,7 +95,7 @@
             <tbody ng-repeat="block in blocks track by $index">
               <tr>
               <td>{{$index + 1}}</td>
-              <td>{{block.product}}</td>
+              <td>{{block.productType.name}}</td>
               <td>{{block.quantity + " " + block.units}}</td>
               <td>{{block.dateCreated.substring(0,10)}}</td>
               <td>
