--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,7 +1,12 @@
 /*
  * Base structure
  */
-//@import url('http://fonts.googleapis.com/css?family=Roboto');
+
+@import url('http://fonts.googleapis.com/css?family=Roboto');
+@import url('http://fonts.googleapis.com/css?family=Open+Sans');
+@import url('http://fonts.googleapis.com/css?family=Lato+Light');
+
+
 $primary-background-color: #EEEEEE;
 $secondary-background-color: #E8E8E8;
 $background-color-3: #DDD;
@@ -9,7 +14,7 @@ $inverse-background-color: #fff;
 $primary-font-color: #000;
 $hyperlink-font-color: #fff;
 $primary-border-color: #CFD8DC;
-$primary-font: Roboto, Helvetica;
+$primary-font: "Lato Light", "Open Sans", "Helvetica", "Roboto";
 $navbar-color: #455A64;
 $side-nav-color: #CFD8DC;
 $btn-color: #607D8B;
