--- a/src/views/sign-up.html
+++ b/src/views/sign-up.html
@@ -26,8 +26,8 @@
                             </div>
 
                             <div class="form-group">
-                                <h6>Fishery Name:</h6>
-                                <input ng-model="fisherName" type="fisherName" class="form-control" placeholder="Appleseed Fishery">
+                                <!--<h6>Fishery Name:</h6>-->
+                                <input ng-model="fisherName" type="hidden" class="form-control" placeholder="Appleseed Fishery">
                             </div>
 
                             <div class="form-group">
