--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -3,7 +3,7 @@
   <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <h2 class="page-header light-text">Manage Orders</h2>
     <div class="row placeholders">
-      <div class="col-lg-8">
+      <!--<div class="col-lg-8">-->
         <div class="container">
           <div class="panel-container">
 
@@ -51,7 +51,7 @@
             </div>
           </div>
         </div>
-      </div>
+      <!--</div>-->
     </div>
   </div>
 </div>
