--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -12,7 +12,12 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Home</a></li>
+                    <!-- NO NEED FOR OVERVIEW PAGE <li><a href="#">Home</a></li> -->
+                    <li class="hide"><a href="#">Products</a></li>
+                    <li class="hide"><a href="#">Supply Chain</a></li>
+                    <li class="hide"><a href="#">Inventory</a></li>
+                    <li class="hide"><a href="#">Sales Channels</a></li>
+                    <li class="hide"><a href="#">Orders</a></li>
                     <li><a href="#">Settings</a></li>
                     <li><a href="#">Help</a></li>
                     <li><a ng-click="logout()" href="#">Logout</a></li>
