--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -13,11 +13,11 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <!-- NO NEED FOR OVERVIEW PAGE <li><a href="#">Home</a></li> -->
-                    <li class="hide"><a href="#">Products</a></li>
-                    <li class="hide"><a href="#">Supply Chain</a></li>
-                    <li class="hide"><a href="#">Inventory</a></li>
-                    <li class="hide"><a href="#">Sales Channels</a></li>
-                    <li class="hide"><a href="#">Orders</a></li>
+                    <li class="hide"><a href="http://coastline-dashboard.herokuapp.com/#/auth/home/products">Products</a></li>
+                    <li class="hide"><a href="http://coastline-dashboard.herokuapp.com/#/auth/home/supply-chain/supply-chain.menu">Supply Chain</a></li>
+                    <li class="hide"><a href="http://coastline-dashboard.herokuapp.com/#/auth/home/inventory/menu">Inventory</a></li>
+                    <li class="hide"><a href="http://coastline-dashboard.herokuapp.com/#/auth/home/sales-management/menu">Sales Channels</a></li>
+                    <li class="hide"><a href="http://coastline-dashboard.herokuapp.com/#/auth/home/orders">Orders</a></li>
                     <li><a href="#">Settings</a></li>
                     <li><a href="#">Help</a></li>
                     <li><a ng-click="logout()" href="#">Logout</a></li>
