Add logic to receive signed s3 url and try to upload pic (not working)

--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -97,7 +97,7 @@
             </div>-->
         <div class ="col-lg-6">
               <label>Attach Product Photo</label>
-              <input class="form-control" type="file" ng-model="file" size ="chars">
+              <input class="form-control" type="file" ng-file-model="photo" size ="chars">
               <small class="text-muted">Attach a picture</small>
             </div>
       </fieldset>
