--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -61,7 +61,7 @@
 
 <script type="text/ng-template" id="viewBlocksModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Inventory Batches (Blocks)</h3>
+    <h3 class="modal-title">Inventory in Cold Storage</h3>
   </div>
 
   <div class="modal-footer">
@@ -118,7 +118,7 @@
 
 <script type="text/ng-template" id="addBlockModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Add Block</h3>
+    <h3 class="modal-title">Add Seafood Batch</h3>
   </div>
   <div class="modal-body">
     <form>
@@ -140,6 +140,21 @@
       <fieldset class="form-group">
         <label>Units</label>
         <input class="form-control" ng-model="units" placeholder="">
+      </fieldset>
+
+      <fieldset class="form-group">
+        <label>Catch Date</label>
+        <input class="form-control" ng-model="quantity" placeholder="">
+      </fieldset>
+
+      <fieldset class="form-group">
+        <label>Catch Location</label>
+        <input class="form-control" ng-model="quantity" placeholder="">
+      </fieldset>
+
+      <fieldset class="form-group">
+        <label>Caught By</label>
+        <input class="form-control" ng-model="quantity" placeholder="">
       </fieldset>
     </form>
   </div>
