--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -144,17 +144,17 @@
 
       <fieldset class="form-group">
         <label>Catch Date</label>
-        <input class="form-control" ng-model="quantity" placeholder="">
+        <input class="form-control" ng-model="date" placeholder="">
       </fieldset>
 
       <fieldset class="form-group">
         <label>Catch Location</label>
-        <input class="form-control" ng-model="quantity" placeholder="">
+        <input class="form-control" ng-model="location" placeholder="">
       </fieldset>
 
       <fieldset class="form-group">
         <label>Caught By</label>
-        <input class="form-control" ng-model="quantity" placeholder="">
+        <input class="form-control" ng-model="caughtBy" placeholder="">
       </fieldset>
     </form>
   </div>
