--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -61,59 +61,61 @@
 
 
  <script type="text/ng-template" id="viewBlocksModal.html">
-   <div class="modal-header">
-     <h3 class="modal-title">Inventory in Cold Storage</h3>
-   </div>
+  <div class="modal-header">
+    <h3 class="modal-title">Inventory in Cold Storage</h3>
+  </div>
 
-   <div class="modal-footer">
+  <div class="modal-footer">
 
-     <button class="btn-dashboard" type="button" ng-click="moveBlock()">Move</button>
-     <button class="btn-dashboard" type="button" ng-click="moveBlockToSales()">Move to Sales</button>
+    <button class="btn-dashboard" type="button" ng-click="moveBlock()">Move</button>
+    <button class="btn-dashboard" type="button" ng-click="moveBlockToSales()">Move to Sales</button>
 
-     <!-- THIS IS THE BUTTON FOR VIEW DETAILS MODAL -->
-     <button class="btn-dashboard" type="button" ng-click="viewDetails()">View Details</button>
-     <button class="btn-dashboard-green" type="button" ng-click="addBlock()">Add</button>
-     <button class="btn-dashboard-red" type="button" ng-click="deleteBlock()">Delete</button>
+    <!-- THIS IS THE BUTTON FOR VIEW DETAILS MODAL -->
+    <button class="btn-dashboard" type="button" ng-click="viewDetails()">View Details</button>
+    <button class="btn-dashboard" type="button" ng-disabled="blocks.length==0" ng-click="editBlock()">Edit</button>
+    <button class="btn-dashboard-green" type="button" ng-click="addBlock()">Add</button>
+    <button class="btn-dashboard-red" type="button" ng-click="deleteBlock()">Delete</button>
 
-   </div>
+  </div>
 
-   <div class="modal-body">
-     <div class="panel panel-default">
-       <!-- <div class="panel-heading">
-       <h3 class="panel-title">Supply Chain Representation</h3></div> -->
-       <div class="panel-body">
-         <div class="table-responsive">
-           <table class="table table-striped">
-             <thead>
-               <tr>
-               <th>#</th>
-               <th>Product Type</th>
-               <th>Quantity</th>
-               <th>Date Created</th>
-               <th>Select</th>
-               </tr>
-             </thead>
-             <tbody ng-repeat="block in blocks track by $index">
-               <tr>
-               <td>{{$index + 1}}</td>
-               <td>{{block.productType.name}}</td>
-               <td>{{block.quantity + " " + block.units}}</td>
-               <td>{{block.dateCreated.substring(0,10)}}</td>
-               <td>
-                 <input type="radio" ng-model="$parent.selectedBlock" ng-value="$index">
-               </td>
-               </tr>
-             </tbody>
-           </table>
-         </div>
-       </div>
-     </div>
-   </div>
+  <div class="modal-body">
+    <div class="panel panel-default">
+      <!-- <div class="panel-heading">
+      <h3 class="panel-title">Supply Chain Representation</h3></div> -->
+      <div class="panel-body">
+        <div class="table-responsive">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+              <th>#</th>
+              <th>Product Type</th>
+              <th>Quantity</th>
+              <th>Date Created</th>
+              <th>Select</th>
+              </tr>
+            </thead>
+            <tbody ng-repeat="block in blocks track by $index">
+              <tr>
+              <td>{{$index + 1}}</td>
+              <td>{{block.productType.name}}</td>
+              <td>{{block.quantity + " " + block.units}}</td>
+              <td>{{block.dateCreated.substring(0,10)}}</td>
+              <td>
+                <input type="radio" ng-model="$parent.selectedBlock" ng-value="$index">
+              </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
 
-   <div class="modal-footer">
-     <button class="btn-dashboard" type="button" ng-click="ok()">Dismiss</button>
-   </div>
- </script>
+  <div class="modal-footer">
+    <button class="btn-dashboard" type="button" ng-click="ok()">Dismiss</button>
+  </div>
+</script>
+
 
 
 
